--- a/index.scss
+++ b/index.scss
@@ -12,7 +12,6 @@ body {
 
 .header {
   display: block;
-  text-align: center;
   height: 70px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.29);
 
@@ -29,13 +28,15 @@ body {
     position: absolute;
     width: 20px;
     height: 12px;
-    left: 325px;
-    margin: 29px 0;
+    margin: 0 auto;
     border: none;
+    right: 25px;
+    top: 30px;
   }
 }
 
 .home {
+  margin: 0 auto;
   display: block;
   position: relative;
   width: 310px;
@@ -83,9 +84,9 @@ body {
 .background {
   display: block;
   position: relative;
-  width: 375px;
-  height: 267px;
+  width: 100%;
   margin-top: 51px;
+  margin: 0 auto;
 }
 
 .results {
@@ -99,6 +100,7 @@ body {
   line-height: 35px;
   text-align: center;
   color: #000000;
+  margin: 0 auto;
 
   &__h3 {
     display: block;
@@ -226,54 +228,56 @@ body {
 }
 
 .details {
-  display: block;
+  display: flex;
+  flex-direction: column;
+
+  gap: 40px;
   background: #f7f7f7;
-  width: 375px;
-  height: 1395.66px;
+  width: 100%;
+  margin: 0px auto;
+  margin-top: 40px;
 
   .first {
     background-color: white;
     position: relative;
-    top: 42px;
-    left: 30px;
-    width: 314px;
-    height: 370px;
+    width: 90%;
+    margin: 0 auto;
+    padding: 40px 0;
 
     &__description {
       &--h3 {
         position: relative;
-        width: 198px;
-        height: 72px;
         font-family: "Raleway";
         font-style: normal;
         font-weight: 400;
         font-size: 30px;
         line-height: 35px;
-        margin-left: 21px;
-        top: -80px;
+        margin: 0 auto;
+        max-width: 272px;
+        max-height: 370px;
+        padding-bottom: 50px;
       }
 
       &--p {
         position: relative;
         margin-top: 10px;
         margin-left: 21px;
-        width: 272px;
-        height: 84px;
         font-family: "Open Sans";
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
-        line-height: 21px;
-        top: -80px;
+        max-width: 272px;
+        margin: 0 auto;
       }
     }
     &__image {
+      margin-bottom: 30px;
+      margin: 0 auto;
+      width: 50%;
+      padding-bottom: 30px;
       &--photo {
         position: relative;
-        margin-top: 37px;
-        margin-left: 37px;
-        width: 192.76px;
-        height: 109.93px;
+        margin: 0 auto;
         z-index: 2;
         background-position: center;
         background-repeat: no-repeat;
@@ -282,13 +286,12 @@ body {
       }
       &--circle {
         position: relative;
-        width: 90.12px;
-        height: 90.12px;
         background-color: #fb3b64;
         border-radius: 50%;
         z-index: 1;
-        top: -132px;
-        left: 144px;
+        margin: 0 auto;
+        width: 90.12px;
+        height: 90.12px;
       }
     }
   }
@@ -296,47 +299,48 @@ body {
   .shop {
     background-color: white;
     position: relative;
-    top: 42px;
-    left: 30px;
-    width: 314px;
-    height: 370px;
+    width: 90%;
+    margin: 0 auto;
 
     &__description {
       &--h3 {
         position: relative;
-        width: 198px;
-        height: 72px;
+        max-width: 272px;
+        max-height: 72px;
         font-family: "Raleway";
         font-style: normal;
         font-weight: 400;
         font-size: 30px;
         line-height: 35px;
-        margin-left: 21px;
-        top: -80px;
+        margin: 0 auto;
+        margin-top: 40px;
       }
 
       &--p {
         position: relative;
         margin-top: 10px;
         margin-left: 21px;
-        width: 272px;
+        max-width: 272px;
         height: 84px;
         font-family: "Open Sans";
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
         line-height: 21px;
-        top: -80px;
+        margin: 40px auto;
+        margin-top: 40px;
       }
     }
     &__image {
+      margin-top: 20px;
       &--photo {
         position: relative;
-        margin-top: 37px;
-        margin-left: 37px;
-        width: 192.76px;
-        height: 109.93px;
+        margin: 0 auto;
         z-index: 2;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
       }
       &--circle {
         position: relative;
@@ -345,8 +349,7 @@ body {
         background-color: #08a6e4;
         border-radius: 50%;
         z-index: 1;
-        top: -144px;
-        left: 47px;
+        margin: 0 auto;
       }
     }
   }
@@ -355,64 +358,62 @@ body {
     background-color: transparent;
     margin: 42px 0;
     position: relative;
-    top: 42px;
-    left: 30px;
-    width: 314px;
-    height: 370px;
+    width: 90%;
+    margin: 0 auto;
 
     &__description {
-      width: 50%;
       background-color: white;
       &--h3 {
         position: relative;
-        width: 198px;
-        height: 72px;
+        max-width: 274px;
         font-family: "Raleway";
         font-style: normal;
         font-weight: 400;
         font-size: 30px;
         line-height: 35px;
-        margin-left: 21px;
-        top: 31px;
+        margin: 0 auto;
+        padding-top: 31px;
       }
 
       &--p {
         position: relative;
         margin-left: 21px;
-        width: 274px;
-        height: 114px;
+        max-width: 274px;
         font-family: "Open Sans";
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
         line-height: 21px;
-        top: 90px;
+        margin: 0px auto;
+        margin-top: 20px;
+        padding-bottom: 20px;
       }
     }
     &__image {
-      width: 35%;
       &--photo {
         position: relative;
-        margin-top: 100px;
-        margin-left: 37px;
+        margin: 0 auto;
         width: 192.76px;
         height: 109.93px;
         z-index: 2;
       }
       &--circle {
+        display: flex;
         position: relative;
-        width: 314px;
-        height: 195px;
         background-color: #55dfb4;
         z-index: 1;
-        top: -144px;
       }
     }
   }
 }
 
 .pricing {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+
   &__h3 {
     width: 114px;
     height: 42px;
@@ -614,12 +615,17 @@ body {
 }
 
 .questions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 30px;
+
   &__h3 {
     position: relative;
     font-weight: 400;
     font-size: 40px;
     line-height: 47px;
-    left: 30px;
   }
   &__p {
     position: relative;
@@ -637,29 +643,10 @@ body {
     list-style: none;
 
     &--mail {
-      &:before {
-        content: "";
-        height: 15px;
-        width: 15px;
-        background-image: url("./assets/Mail\ Icon\ 2.png");
-        background-position: center center;
-        background-size: cover;
-        position: absolute;
-        left: -15px;
-      }
+      display: inline-block;
     }
 
     &--phone {
-      &:before {
-        content: "";
-        height: 15px;
-        width: 15px;
-        background-image: url("./assets/Phone\ Icon\ 2.png");
-        background-position: center center;
-        background-size: cover;
-        position: absolute;
-        left: -15px;
-      }
     }
   }
 
@@ -800,26 +787,33 @@ body {
   .header {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 
     &__h1 {
       position: inherit;
+      margin: 0 50px;
     }
 
     &__button {
       position: inherit;
+      margin: 0 50px;
     }
   }
-
+  .main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   .home {
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 10%;
-    left: 0;
+    width: 100%;
+    height: 100%;
 
     &__h2 {
       width: 100%;
@@ -835,8 +829,7 @@ body {
       font-weight: 400;
       font-size: 16px;
       line-height: 22px;
-      margin-top: 3%;
-
+      margin-top: 20px;
       left: 0;
     }
 
@@ -856,8 +849,7 @@ body {
     display: block;
     position: relative;
     width: 100%;
-    height: 500px;
-    margin-top: 51px;
+    height: 20%;
   }
 
   .results {
@@ -893,6 +885,7 @@ body {
     align-items: center;
     justify-content: center;
     gap: 37px;
+    padding: 100px 0;
 
     .first {
       display: flex;
@@ -917,7 +910,7 @@ body {
           margin: 0;
           margin-top: 17px;
           font-size: 16px;
-          width: 416px;
+          max-width: 416px;
           height: 66px;
           top: 0;
           margin-bottom: 50px;
@@ -940,7 +933,6 @@ body {
           height: 180px;
           border-radius: 41px;
           top: 50px;
-          left: 200px;
           transform: rotate(45deg);
         }
       }
@@ -962,8 +954,8 @@ body {
         margin-right: 20px;
         border-bottom: 4px solid #08a6e4;
         &--h3 {
-          margin-top: 60px;
-          width: 259px;
+          margin: 0;
+          max-width: 259px;
           height: 84px;
           margin-left: 0px;
           font-weight: 400;
@@ -972,9 +964,8 @@ body {
         }
         &--p {
           margin: 0;
-          margin-top: 17px;
-          width: 416px;
-          height: 66px;
+          margin-top: 30px;
+          max-width: 416px;
         }
       }
 
@@ -1005,17 +996,17 @@ body {
       top: 0;
 
       &__description {
+        width: 60%;
+        height: 300px;
         &--h3 {
           position: relative;
-          width: 198px;
-          height: 72px;
+          max-width: 348px;
           font-family: "Raleway";
           font-style: normal;
           font-weight: 400;
           font-size: 30px;
           line-height: 35px;
           margin-left: 35px;
-          top: 31px;
         }
 
         &--p {
@@ -1023,7 +1014,7 @@ body {
           margin-top: 17px;
           margin-left: 35px;
           font-size: 16px;
-          width: 416px;
+          max-width: 416px;
           border-bottom: 4px solid #55dfb4;
         }
       }
@@ -1119,27 +1110,49 @@ body {
     align-items: center;
   }
   .questions {
-    width: 60%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: center;
     margin-top: 150px;
+    gap: 100px;
     &__h3 {
       left: 0;
+      position: inherit;
     }
 
     &__p {
       margin-top: 20;
-      left: 0;
+      position: inherit;
     }
 
     &__ul {
       left: 0;
+      display: flex;
+      gap: 40px;
+      color: #a5a5a5;
+
+      &--phone {
+        display: flex;
+        gap: 5px;
+      }
+      &--mail {
+        display: flex;
+        gap: 5px;
+      }
     }
 
     &__name {
       margin: 0;
+      position: inherit;
+    }
+    &__email {
+      position: inherit;
+    }
+
+    &__consent {
+      margin-left: 0px;
     }
 
     &__buton {
