Add styles to suscription component in mobile design
Signed-off-by: AlbertoLanchas <albertolsn7@gmail.com>

--- a/index.css
+++ b/index.css
@@ -258,7 +258,7 @@ body {
   padding-bottom: 30px;
 }
 .details .first__image--photo {
-  position: relative;
+  position: absolute;
   margin: 0 auto;
   z-index: 2;
   background-position: center;
@@ -267,13 +267,15 @@ body {
   position: relative;
 }
 .details .first__image--circle {
-  position: relative;
+  position: absolute;
   background-color: #fb3b64;
-  border-radius: 50%;
+  border-radius: 41px;
   z-index: 1;
   margin: 0 auto;
   width: 90.12px;
   height: 90.12px;
+  top: 15px;
+  right: 47px;
 }
 .details .shop {
   background-color: white;
@@ -393,18 +395,21 @@ body {
 }
 
 .suscription {
-  margin-bottom: 30px;
   border: 1px solid #eb476e;
   background-color: white;
   position: relative;
   width: 293px;
   height: 251px;
   border-radius: 18px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 .suscription__price {
   display: inline-block;
   position: relative;
   display: inline-block;
+  left: 20px;
+  top: -15px;
 }
 .suscription__price--h4 {
   font-size: 20px;
@@ -420,8 +425,11 @@ body {
   position: relative;
   display: inline-block;
   list-style: none;
-  left: 70px;
+  left: 90px;
   top: 20px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
 }
 .suscription__ul--li {
   position: relative;
@@ -436,7 +444,7 @@ body {
   background-size: cover;
   position: absolute;
   top: 6px;
-  left: -15px;
+  left: -25px;
 }
 .suscription__button {
   cursor: pointer;
@@ -452,18 +460,20 @@ body {
 }
 
 .suscription1 {
-  margin-bottom: 30px;
   background-color: white;
   position: relative;
   width: 293px;
   height: 251px;
   border: 1px solid #07ace6;
   border-radius: 18px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 .suscription1__price {
   display: inline-block;
   position: relative;
   display: inline-block;
+  left: 20px;
 }
 .suscription1__price--h4 {
   font-size: 20px;
@@ -471,7 +481,7 @@ body {
 }
 .suscription1__price--p {
   color: #07ace6;
-  margin: 14px 0;
+  margin-top: 14px;
   font-weight: 300;
   font-size: 46px;
 }
@@ -484,14 +494,18 @@ body {
   position: relative;
   display: inline-block;
   list-style: none;
-  left: 70px;
-  top: 20px;
+  top: 26px;
+  left: 55px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
 }
 .suscription1__ul--li {
   position: relative;
   margin-bottom: 15px;
 }
 .suscription1__ul--li:before {
+  content: "";
   height: 15px;
   width: 15px;
   background-image: url("./assets/Checkbox.png");
@@ -499,7 +513,7 @@ body {
   background-size: cover;
   position: absolute;
   top: 6px;
-  left: -15px;
+  left: -25px;
 }
 .suscription1__button {
   cursor: pointer;
@@ -515,18 +529,19 @@ body {
 }
 
 .suscription2 {
-  margin-bottom: 30px;
   background-color: white;
   position: relative;
   width: 293px;
   height: 251px;
   border: 1px solid #55dfb4;
   border-radius: 18px;
+  margin: 0 auto;
 }
 .suscription2__price {
   display: inline-block;
   position: relative;
   display: inline-block;
+  left: 25px;
 }
 .suscription2__price--h4 {
   font-size: 20px;
@@ -547,8 +562,11 @@ body {
   position: relative;
   display: inline-block;
   list-style: none;
-  left: 70px;
+  left: 75px;
   top: 20px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
 }
 .suscription2__ul--li {
   position: relative;
@@ -563,7 +581,7 @@ body {
   background-size: cover;
   position: absolute;
   top: 6px;
-  left: -15px;
+  left: -25px;
 }
 .suscription2__button {
   cursor: pointer;
@@ -825,6 +843,7 @@ body {
     display: flex;
     flex-direction: row-reverse;
     width: 70%;
+    min-width: 900px;
     justify-content: space-between;
     align-items: center;
     left: 0;
@@ -855,17 +874,19 @@ body {
     margin-right: 93px;
   }
   .details .first__image--photo {
+    position: absolute;
     margin: 0;
-    top: -70px;
     width: 386.44px;
     height: 219px;
-    left: 0;
+    top: -80px;
+    right: 0;
   }
   .details .first__image--circle {
     width: 180px;
     height: 180px;
     border-radius: 41px;
-    top: 50px;
+    top: -100px;
+    right: 0px;
     transform: rotate(45deg);
   }
   .details .first__description {
@@ -875,6 +896,7 @@ body {
     background-color: white;
     display: flex;
     width: 70%;
+    min-width: 900px;
     justify-content: space-evenly;
     align-items: center;
     left: 0;
@@ -903,7 +925,8 @@ body {
     width: 50%;
   }
   .details .shop__image--photo {
-    width: 426px;
+    width: 100%;
+    max-width: 426px;
     height: 328px;
     margin: 0;
   }
@@ -917,6 +940,7 @@ body {
   .details .brand {
     display: flex;
     width: 70%;
+    min-width: 900px;
     justify-content: space-between;
     left: 0;
     top: 0;
@@ -975,7 +999,8 @@ body {
     align-items: center;
   }
   .pricing .suscription {
-    width: 372px;
+    width: 80%;
+    min-width: 300px;
     height: 461px;
     display: flex;
     flex-direction: column;
@@ -990,7 +1015,8 @@ body {
     bottom: -100px;
   }
   .pricing .suscription1 {
-    width: 372px;
+    width: 80%;
+    min-width: 300px;
     height: 461px;
     display: flex;
     flex-direction: column;
@@ -1005,7 +1031,8 @@ body {
     bottom: -80px;
   }
   .pricing .suscription2 {
-    width: 372px;
+    width: 80%;
+    min-width: 300px;
     height: 461px;
     display: flex;
     flex-direction: column;
