--- a/index.css
+++ b/index.css
@@ -22,6 +22,10 @@ body {
   margin: 17px;
   color: #08a6e4;
 }
+.header__links {
+  display: none;
+  opacity: 0;
+}
 .header__button {
   cursor: pointer;
   position: absolute;
@@ -227,6 +231,8 @@ body {
   width: 90%;
   margin: 0 auto;
   padding: 40px 0;
+  max-width: 350px;
+  margin-top: 42px;
 }
 .details .first__description--h3 {
   position: relative;
@@ -282,6 +288,7 @@ body {
   position: relative;
   width: 90%;
   margin: 0 auto;
+  max-width: 350px;
 }
 .details .shop__description--h3 {
   position: relative;
@@ -335,7 +342,9 @@ body {
   margin: 42px 0;
   position: relative;
   width: 90%;
+  max-width: 350px;
   margin: 0 auto;
+  margin-bottom: 44px;
 }
 .details .brand__description {
   background-color: white;
@@ -383,6 +392,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-top: 53px;
   gap: 20px;
 }
 .pricing__h3 {
@@ -757,8 +767,29 @@ body {
     margin: 0 50px;
   }
   .header__button {
-    position: inherit;
-    margin: 0 50px;
+    display: none;
+    opacity: 0;
+  }
+  .header__links {
+    display: flex;
+    opacity: 1;
+    font-weight: 700;
+    font-size: 11px;
+    line-height: 15px;
+    color: #a5a5a5;
+    margin-right: 115px;
+    letter-spacing: 3.28px;
+    gap: 105px;
+    position: absolute;
+    top: 30px;
+    right: 0;
+  }
+  .header__links a:nth-child(1) {
+    border-bottom: #08a6e4 2px solid;
+    color: black;
+    position: relative;
+    padding-bottom: 20px;
+    top: 0px;
   }
   .main {
     display: flex;
@@ -1149,4 +1180,68 @@ body {
   color: #07ace6;
   width: 1px;
   height: 10px;
+}
+
+.slider {
+  position: relative;
+  border: thin solid black;
+  width: 50%;
+  margin: 1rem auto;
+  text-align: center;
+}
+
+.slider-slides {
+  position: relative;
+  height: 400px;
+}
+
+.slider-slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s ease;
+}
+
+.slider-slide img {
+  height: inherit;
+  width: inherit;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 50%;
+     object-position: 50% 50%;
+}
+
+.slider-slide.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.slider-btn {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 3em;
+  font-weight: bold;
+}
+
+.slider a {
+  display: block;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: thin solid black;
+  text-decoration: none;
+  background-color: white;
+  color: black;
+  transition: all 0.3s ease;
+}
+
+.slider a:hover {
+  color: grey;
 }/*# sourceMappingURL=index.css.map */
