--- a/index.css
+++ b/index.css
@@ -1244,4 +1244,56 @@ body {
 
 .slider a:hover {
   color: grey;
+}
+
+.panel.is-active {
+  opacity: 1;
+  visibility: visible;
+  display: flex;
+  background-color: yellow;
+}
+.panel.is-active img:nth-child(1) {
+  background-color: red;
+}
+
+.header__button--menu {
+  background-color: red;
+}
+
+.modal {
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.55);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal.is-open {
+  display: flex;
+}
+
+.modal-container {
+  position: relative;
+  padding: 1rem;
+  min-width: 320px;
+  max-width: 480px;
+  min-height: 200px;
+  max-height: 600px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
 }/*# sourceMappingURL=index.css.map */
