--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
 
 .header {
   display: block;
-  height: 70px;
+  min-height: 70px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.29);
 }
 .header__h1 {
@@ -25,6 +25,25 @@ body {
 .header__links {
   display: none;
   opacity: 0;
+}
+.header__links a:nth-child(1) {
+  color: black;
+}
+.header .open {
+  display: flex;
+  opacity: 1;
+}
+.header .menu {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  padding: 20px;
+  margin-top: 60px;
+  font-weight: 700;
+  font-size: 11px;
+  line-height: 15px;
+  letter-spacing: 3.28px;
+  color: #a5a5a5;
 }
 .header__button {
   cursor: pointer;
@@ -791,6 +810,15 @@ body {
     padding-bottom: 20px;
     top: 0px;
   }
+  .header .menu {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    gap: 95px;
+    top: 0px;
+    padding: 0;
+    margin: 0;
+  }
   .main {
     display: flex;
     flex-direction: column;
@@ -1189,6 +1217,22 @@ body {
   margin: 1rem auto;
   text-align: center;
 }
+.slider__btnContainer {
+  width: 120px;
+  margin: 0 auto;
+}
+.slider__btn {
+  cursor: pointer;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: gainsboro;
+  margin-left: 10px;
+  border: none;
+}
+.slider__btn:hover {
+  background-color: grey;
+}
 
 .slider-slides {
   position: relative;
@@ -1230,10 +1274,12 @@ body {
   font-weight: bold;
 }
 
-.slider a {
+.prev,
+.next {
+  cursor: pointer;
   display: block;
-  width: 4rem;
-  height: 4rem;
+  width: 1.5rem;
+  height: 1.5rem;
   border-radius: 50%;
   border: thin solid black;
   text-decoration: none;
@@ -1242,7 +1288,7 @@ body {
   transition: all 0.3s ease;
 }
 
-.slider a:hover {
+.slider button:hover {
   color: grey;
 }
 
@@ -1253,10 +1299,6 @@ body {
   background-color: yellow;
 }
 .panel.is-active img:nth-child(1) {
-  background-color: red;
-}
-
-.header__button--menu {
   background-color: red;
 }
 
