--- a/index.scss
+++ b/index.scss
@@ -12,7 +12,7 @@ body {
 
 .header {
   display: block;
-  height: 70px;
+  min-height: 70px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.29);
 
   &__h1 {
@@ -26,6 +26,27 @@ body {
   &__links {
     display: none;
     opacity: 0;
+    a:nth-child(1) {
+      color: black;
+    }
+  }
+
+  .open {
+    display: flex;
+    opacity: 1;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    padding: 20px;
+    margin-top: 60px;
+    font-weight: 700;
+    font-size: 11px;
+    line-height: 15px;
+    letter-spacing: 3.28px;
+    color: #a5a5a5;
   }
 
   &__button {
@@ -853,6 +874,15 @@ body {
         top: 0px;
       }
     }
+    .menu {
+      display: flex;
+      flex-direction: row;
+      position: relative;
+      gap: 95px;
+      top: 0px;
+      padding: 0;
+      margin: 0;
+    }
   }
   .main {
     display: flex;
@@ -1293,6 +1323,23 @@ body {
   width: 50%;
   margin: 1rem auto;
   text-align: center;
+
+  &__btnContainer {
+    width: 120px;
+    margin: 0 auto;
+  }
+  &__btn {
+    cursor: pointer;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: gainsboro;
+    margin-left: 10px;
+    border: none;
+  }
+  &__btn:hover {
+    background-color: grey;
+  }
 }
 
 .slider-slides {
@@ -1333,10 +1380,12 @@ body {
   font-weight: bold;
 }
 
-.slider a {
+.prev,
+.next {
+  cursor: pointer;
   display: block;
-  width: 4rem;
-  height: 4rem;
+  width: 1.5rem;
+  height: 1.5rem;
   border-radius: 50%;
   border: thin solid black;
   text-decoration: none;
@@ -1345,7 +1394,7 @@ body {
   transition: all 0.3s ease;
 }
 
-.slider a:hover {
+.slider button:hover {
   color: grey;
 }
 
@@ -1359,9 +1408,6 @@ body {
   img:nth-child(1) {
     background-color: red;
   }
-}
-.header__button--menu {
-  background-color: red;
 }
 
 //MODAL
